--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,12 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.4
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  firebase_auth: ^3.3.3
+  firebase_core: ^1.10.5
+  firebase_storage: ^10.2.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
